--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -1,22 +1,13 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html,
 body {
-    @apply m-0 p-0 box-border text-[16px] text-gray-900 bg-white;
-    font-family:
-        'Pretendard',
-        -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        'Open Sans',
-        'Helvetica Neue',
-        sans-serif;
+    @apply m-0 p-0 box-border text-[16px] text-gray-900 bg-gray-200;
+    font-family: 'Pretendard', sans-serif;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
